# rust-mini-projects

./: README.md
01-hash-tool/: Cargo.toml  test.txt
01-hash-tool/src/: lib.rs  main.rs
merkle-tree/: Cargo.toml  README.md
merkle-tree/src/: lib.rs  merkle_tree.rs  utils.rs
newsletter/: .dockerignore  Cargo.toml  README.md  configuration.yaml  spec.yaml
newsletter/.github/workflows/: general.yml
newsletter/.sqlx/: query-96d018ce6bcbe353b25e0d98192b186700e5d493f0dfde3bf9e1c0fd918ecaea.json
newsletter/configuration/: base.yaml  production.yaml
newsletter/docker/: Dockerfile
newsletter/migrations/: 20240805125014_create_subscriptions_table.sql
newsletter/scripts/: init_db.sh
newsletter/src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
newsletter/src/domain/: subscriber_email.rs  subscriber_name.rs
newsletter/src/routes/: subscriptions.rs  subscriptions_confirm.rs
newsletter/tests/: health_check.rs
newsletter/tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
playground/src/: main.rs
simple-blockchain/: .gitignore  Cargo.toml
simple-blockchain-pow/: Cargo.toml  INSTRUCTIONS.md  README.md  README_ext.md  requirements.md
simple-blockchain-pow/src/: block.rs  block_payload.rs  blockchain.rs  main.rs
simple-blockchain/src/: block.rs  blockchain.rs  lib.rs  main.rs
web-server/: 404.html  Cargo.toml  other.html
web-server/src/: main.rs  thread_pool.rs
